# cherryai-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  todo.txt
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_identity.py  0002_ownership.py  0003_fastmail_credentials.py
src/cherryai_api/: __init__.py  admin.py  agent.py  api.py  auth.py  calendar.py  cli.py  contacts.py  db.py  email.py  facts.py  feedback.py  integrations.py  logging_setup.py  meal_units.py  meals.py  memory.py  orm.py  planner.py  settings.py  telemetry.py  users.py  wiki.py  workflows.py
tests/: conftest.py  test_admin.py  test_agent.py  test_auth.py  test_build_model.py  test_cli_users.py  test_db.py  test_facts.py  test_feedback.py  test_logging_setup.py  test_meals.py  test_memory.py  test_migrations.py  test_orm.py  test_route_protection.py  test_search.py  test_wiki.py  test_workflows.py
