[project]
name = "cherryai-api"
version = "0.1.0"
description = "CherryAI demo backend: Pydantic AI agent over OpenRouter with Cognee memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "cognee[fastembed]>=1.2.2,<2",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "logfire[asyncpg,fastapi,httpx,system-metrics]>=4.37.0",
    "loguru>=0.7.3",
    "neo4j>=6.2.0",
    "pgvector>=0.5.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.13.0",
    "pydantic-ai-slim[openai]>=2.13.0",
    "pydantic-settings>=2.14.2",
    "sse-starlette>=3.4.5",
    "typer>=0.27.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
cherryai = "cherryai_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cherryai_api"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
